--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,31 +1,37 @@
+# GitHub Action for generating a contribution graph with a snake eating your contributions.
 name: Generate Snake
 
+# Controls when the action will run.
 on:
   schedule:
+      # every 12 hours
     - cron: "0 */12 * * *"
+
+  # This command allows us to run the Action automatically from the Actions tab.
   workflow_dispatch:
+  
+  # Also run on every push on the master branch
   push:
     branches:
     - main
 
+# The sequence of runs in this workflow:
 jobs:
+  # This workflow contains a single job called "build"
   build:
+    # The type of runner that the job will run on
     runs-on: ubuntu-latest
+
+    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      - name: Checkout repo
-        uses: actions/checkout@latest_version
-        with:
-          ref: main
-
-      - name: Get GitHub username
-        id: get-username
-        run: echo "::set-output name=username::${{ github.repository_owner }}"
-
+      - name: Clone repo
+        uses: actions/checkout@v3
+    
       - name: Generate the snake files in './dist/'
         uses: Platane/snk@v3
         id: snake-gif
         with:
-          github_user_name: ${{ steps.get-username.outputs.username }}
+          github_user_name:  ${{ github.repository_owner }}
           outputs: |
             dist/github-contribution-grid-snake.svg
             dist/github-contribution-grid-snake-dark.svg?palette=github-dark
@@ -38,7 +44,7 @@ jobs:
         run: git status
 
       - name: Push new files to the output branch
-        uses: crazy-max/ghaction-github-pages@latest_version
+        uses: crazy-max/ghaction-github-pages@v3.1.0
         with:
           target_branch: output
           build_dir: dist
